--- a/o-1/index.css
+++ b/o-1/index.css
@@ -1,6 +1,23 @@
 body {
+    box-sizing: border-box;
+    margin: 0;
+    background-color: white;
+    color: black;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #adcbe3;
+}
+
+main {
+    display: grid;
+    place-items: center;
+    padding: 2rem;
+    gap: 1rem;
+}
+
+#oppgaver {
+    width: 70%;
+    background-color: #8471f2;
+    color: white;
+    padding: 1rem;
 }
 
 #oppgavesvar {
@@ -19,6 +36,7 @@ input {
     display: grid;
     place-items: center;
     background-color: white;
+    color: black;
     margin-top: 20px;
     width: 280px;
     height: 30px;
