--- a/o-3/index.css
+++ b/o-3/index.css
@@ -1,12 +1,25 @@
-* {
+body {
+    box-sizing: border-box;
     margin: 0;
+    background-color: white;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 1rem;
+    transition: 1s;
 }
 
-body {
-    padding: 1rem;
-    background-color: #adcbe3;
+main {
+    display: grid;
+    place-items: center;
+    padding: 2rem;
+    gap: 1rem;
+}
+
+#oppgaver {
+    width: 70%;
+    background-color: #8471f2;
     color: white;
-    transition: 1s;
+    padding: 1rem;
 }
 
 #oppgavesvar {
@@ -23,7 +36,7 @@ section {
 button {
     border-radius: 0.5rem;
     padding: 0.5rem 1rem;
-    background-color: #63ace5;
+    background-color: #AFB8FF;
     font-weight: 700;
     color: white;
 }
